fix: :lipstick: wrap pet item lore at 300px

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -1170,6 +1170,10 @@ input[type="search"]::-webkit-search-cancel-button {
             display: block;
             min-height: calc(1em * 1.2); // fallback for lh
             min-height: 1lh;
+
+            &.wrap {
+                max-width: 300px;
+            }
         }
     }
 
